@@ -844,14 +844,14 @@ bool MapData::export_to_lua(std::ostream& out) const {
       << "  height = " << get_size().height << ",\n"
       << "  num_layers = " << get_num_layers() << ",\n";
   if (has_world()) {
-    out << "  world = \"" << get_world() << "\",\n";
+    out << "  world = \"" << escape_string(get_world()) << "\",\n";
   }
   if (has_floor()) {
     out << "  floor = " << get_floor() << ",\n";
   }
-  out << "  tileset = \"" << get_tileset_id() << "\",\n";
+  out << "  tileset = \"" << escape_string(get_tileset_id()) << "\",\n";
   if (has_music()) {
-    out << "  music = \"" << get_music_id() << "\",\n";
+    out << "  music = \"" << escape_string(get_music_id()) << "\",\n";
   }
   out << "}\n\n";
 
